Rename to krit, add --common-checks, and add HINT severity
- Rename project and package from kt-analyzer to krit
- Add --common-checks flag: switches compiler diagnostics to
  ONLY_COMMON_CHECKERS and filters inspections by their XML-declared
  level/enabledByDefault to match what the Kotlin LSP (Zed plugin) shows
- Add HINT severity level (between INFO and WARNING) so WEAK_WARNING
  inspection findings are distinguishable from full WARNING findings
- Parse plugin JAR XML metadata to filter INFORMATION-level and
  disabled-by-default inspections in --common-checks mode
- Add --absolute-paths flag and stderr prefix suppression
- Switch to jdk.internal.misc.Unsafe for Java 23+ compatibility